testes para produto service